<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_title"
            android:textColor="#ffffffff"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/usr_inputNum_str"
                android:textColor="@android:color/white"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/txt_usr_inputNum"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:hint=""
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_weight="3.5"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/guanglu_str"
                android:textColor="@android:color/white"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/txt_guanglu"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:hint=""
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:gravity="right"
                android:paddingLeft="15.0dip"
                android:text="@string/usr_addr"
                android:textColor="@android:color/white"
                android:textSize="16.0sp" />

            <EditText
                android:id="@+id/txt_user_addr"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:hint=""
                android:paddingLeft="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/print_btn"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/printbtn_str"
                android:textColor="#fff"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/cls_btn"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="20.0dip"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/clsbtn_str"
                android:textColor="#fff"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>